docs/content/v2.6/explore/query-1-performance/_index.md
---
title: Query Tuning
headerTitle: Query Tuning
linkTitle: Query tuning
description: Tuning and optimizing query performance
headcontent: Tuning and optimizing query performance
image: /images/section_icons/index/develop.png
section: Explore
menu:
  v2.6:
    identifier: query-tuning
    parent: explore
    weight: 280
---

<div class="row">

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="query-tuning-intro/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="articles">1 article</div>
        <div class="title">Introduction</div>
      </div>
      <div class="body">
        Tune and optimize query performance in YugabyteDB.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-statements/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="articles">1 article</div>
        <div class="title">Get query statistics using pg_stat_statements</div>
      </div>
      <div class="body">
        Track planning and execution statistics for all SQL statements executed by a server.
      </div>
    </a>
  </div>
  
  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-activity/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="articles">1 article</div>
        <div class="title">View live queries with pg_stat_activity</div>
      </div>
      <div class="body">
        Troubleshoot problems and identify long-running queries with the activity view.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="explain-analyze/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="articles">1 article</div>
        <div class="title">Analyze queries with EXPLAIN</div>
      </div>
      <div class="body">
        Tune your queries by creating and analyzing execution plans.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-hint-plan/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="articles">1 article</div>
        <div class="title">Using pg_hint_plan</div>
      </div>
      <div class="body">
        Control query execution plans with hinting phrases.
      </div>
    </a>
  </div>

</div>
