docs/content/v2.14/explore/query-1-performance/_index.md
---
title: Query Tuning
headerTitle: Query Tuning
linkTitle: Query tuning
description: Tuning and optimizing query performance
headcontent: Tuning and optimizing query performance
image: /images/section_icons/index/develop.png
menu:
  v2.14:
    identifier: query-tuning
    parent: explore
    weight: 280
type: indexpage
---
<div class="row">

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="query-tuning-intro/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">Introduction</div>
      </div>
      <div class="body">
        Tune and optimize query performance in YugabyteDB.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-statements/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">Get query statistics using pg_stat_statements</div>
      </div>
      <div class="body">
        Track planning and execution statistics for all SQL statements executed by a server.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-activity/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">View live queries with pg_stat_activity</div>
      </div>
      <div class="body">
        Troubleshoot problems and identify long-running queries with the activity view.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="yb-pg-stat-get-queries/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">View terminated queries with yb_pg_stat_get_queries</div>
      </div>
      <div class="body">
        Identify terminated queries with the get queries function.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-progress-copy/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">View COPY status with pg_stat_progress_copy</div>
      </div>
      <div class="body">
        Get the COPY command status, number of tuples processed, and other COPY progress reports with this view.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-stat-progress-create-index/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">View CREATE INDEX status with pg_stat_progress_create_index</div>
      </div>
      <div class="body">
        Get the CREATE INDEX command status, including the status of an ongoing concurrent index backfill, and the index build's progress reports.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="explain-analyze/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">Analyze queries with EXPLAIN</div>
      </div>
      <div class="body">
        Tune your queries by creating and analyzing execution plans.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="pg-hint-plan/">
      <div class="head">
        <img class="icon" src="/images/section_icons/develop/learn.png" aria-hidden="true" />
        <div class="title">Optimize YSQL queries using pg_hint_plan</div>
      </div>
      <div class="body">
        Control query execution plans with hinting phrases.
      </div>
    </a>
  </div>
</div>
